# windows-wsl-asr

./: .gitignore  README.md  Start Pibo Local ASR.cmd  Start Pibo Local ASR.vbs  implementation-plan.md  spec.md
apps/windows-tray/: index.html  package-lock.json  package.json  tsconfig.json
apps/windows-tray/src/: App.tsx  styles.css
apps/windows-tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-tray/src-tauri/capabilities/: default.json
apps/windows-tray/src-tauri/src/: app_state.rs  backend_manager.rs  config.rs  hotkey.rs  lib.rs  logging.rs  main.rs
apps/windows-tray/src-tauri/src/audio/: capture.rs  processing.rs  resample.rs
apps/windows-tray/src-tauri/src/dictation/: backend_client.rs  paste.rs  session_controller.rs
apps/windows-tray/src-tauri/src/overlay/: window.rs
apps/windows-tray/src/components/: BackendStatusCard.tsx  DeviceSelect.tsx  DictionaryEditor.tsx  HotkeyField.tsx  ToggleField.tsx
apps/windows-tray/src/lib/: api.ts  types.ts
apps/windows-tray/src/pages/: SettingsPage.tsx
backend/wsl-qwen-asr/: README.md  requirements.txt
backend/wsl-qwen-asr/app/: __init__.py  asr_service.py  schemas.py  server.py  settings.py
backend/wsl-qwen-asr/scripts/: bootstrap.sh  check_env.sh  run_server.sh
docs/: usage.md
scripts/: edit-dictionary.ps1  start-app.ps1
shared/contracts/: backend-api.md
