[package]
name = "pibo-local-asr-tray"
version = "0.1.0"
edition = "2021"

[lib]
name = "pibo_local_asr_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
cpal = "0.16.0"
dirs = "6.0.0"
log = "0.4.28"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
tauri = { version = "2.8.5", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3.0"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
